<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="DEADMANCONTROL" Id="{736eaf38-7d73-476b-a404-94a5aa81a322}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM DEADMANCONTROL
VAR
	
	DEADMANCONTROLCASE	:INT; (*CASE STATEMENT*)
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE DEADMANCONTROLCASE	OF
	
(*NORMAL OPERATION*)

	0:
	
	MOBILEHOIST.MAGNETIC_BRAKE1 	:= FALSE;
	MOBILEHOIST.MAGNETIC_BRAKE2 	:= FALSE;
	MOBILEHOIST.SPOTLIGHT			:= FALSE;
	
	IF	MOBILEHOIST.DEADMAN_SWITCH THEN
		
	DEADMANCONTROLCASE :=1;
		
	END_IF
	
(*DEADMAN SWITCH IS PRESSED*)	
	
	1:
	
	IF MOBILEHOIST.DEADMAN_SWITCH THEN
		
		MOBILEHOIST.MAGNETIC_BRAKE1 	:= TRUE;
		MOBILEHOIST.MAGNETIC_BRAKE2 	:= TRUE;
		MOBILEHOIST.SPOTLIGHT			:= TRUE;
		
	ELSE
		
		MOBILEHOIST.MAGNETIC_BRAKE1 	:= FALSE;
		MOBILEHOIST.MAGNETIC_BRAKE2 	:= FALSE;
		MOBILEHOIST.SPOTLIGHT			:= FALSE;
		DEADMANCONTROLCASE 				:= 0;
		
	END_IF

END_CASE]]></ST>
    </Implementation>
    <LineIds Name="DEADMANCONTROL">
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="22" Count="1" />
      <LineId Id="68" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="29" Count="1" />
      <LineId Id="27" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="52" Count="1" />
      <LineId Id="32" Count="2" />
      <LineId Id="38" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="40" Count="4" />
      <LineId Id="61" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>